--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit
-keras==3.10.0
+keras==3.8.0
+tensorflow==2.18.0
 numpy
 pandas
-scikit-learn==1.6.0
-matplotlib
-seaborn
+scikit-learn==1.6.1
+matplotlib==3.10.0
+seaborn==0.13.2
