--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-tensorflow==2.15.0
+tensorflow
 numpy
 pandas
-scikit-learn==1.6.1
-matplotlib==3.10.0
-seaborn==0.13.2
+scikit-learn
+matplotlib
+seaborn
